MDEV-8283 crash in get_mm_leaf with xor on binary col